--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "8086:8086"
     networks:
       - monitoring
+    volumes:
+      - ./:/var/lib/influxdb
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
